--- a/Front-End-Social/package.json
+++ b/Front-End-Social/package.json
@@ -6,6 +6,7 @@
     "hover.css": "^2.3.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1"
   },
